# Prophet

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  HARNESS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/harness/: api_hooks.py  debug_viz.py  hotswap.py  hybrid_exec.py  metric_logger.py  performance.py  recovery.py  sandbox.py
backend/migrations/: env.py
backend/scripts/: run_use_case_pilot.py
backend/tests/: conftest.py  test_00_sanity.py  test_01_acceptance.py  test_01_cognition.py  test_01_decision.py  test_01_drift.py  test_01_emotion.py  test_01_influence.py  test_01_memory.py  test_01_perception.py  test_01_schema.py  test_01_tier_selector.py  test_02_network_acceptance.py  test_02_network_errors.py  test_03_cascade.py  test_03_diffusion_acceptance.py  test_03_diffusion_errors.py  test_03_exposure.py  test_03_propagation.py  test_03_recsys_feed.py  test_03_sentiment.py  test_04_community_orchestrator.py  test_04_metric_collector.py  test_04_orchestrator.py  test_04_simulation_acceptance.py  test_04_simulation_errors.py  test_04_step_runner.py  test_05_adapter.py  test_05_cache.py  test_05_embed_dim.py  test_05_engine_control.py  test_05_llm_acceptance.py  test_05_llm_errors.py  test_05_prompt_builder.py  test_05_quota.py  test_05_registry.py  test_06_api_acceptance.py  test_06_api_agents.py  test_06_api_communities.py  test_06_api_monte_carlo.py  (+31 more)
frontend/: Dockerfile  (+6 more)
(+365 files in other folders)
